@@ -15,6 +15,10 @@
                     "description": "Retrieve the description of an element of choice.",
                     "category": "f_basic"
                 },{
+                    "name": "firstChildID",
+                    "description": "Retrieve the first child of a given ID.",
+                    "category": "f_basic"
+                },{
                     "name": "stripAsAlias",
                     "description": "Output modifier that turns input into lowercase-hyphen-separated format and strips unwanted special characters.",
                     "category": "f_modifiers"
