@@ -1,0 +1,3 @@
+Inherit (from Form Layout)=[[*fb_form_layout]]
+Above input field / options (Vertical)=vertical
+Left of input field / options (Horizontal)=horizontal
