@@ -1,6 +1,6 @@
 <div class="ui vertical stripe segment [[+background]]">
     <div class="ui [[+container_type]] container">
-        <div class="ui two column stackable doubling [[+padding]] [[+alignment]] grid">
+        <div class="ui two column stackable doubling [[+padding]] [[+alignment]] [[+divider]] grid">
             <div class="row">
                 <div class="column">[[+col_1]]</div>
                 <div class="column">[[+col_2]]</div>
