@@ -63,11 +63,8 @@ if ($cbLayout) {
         // Use a prefix to prevent collisions
         $modx->toPlaceholders($array, $prefix);
 
-        // Set placeholder with all field settings parsed in an HTML table
-        $settingsTable = $modx->runSnippet('jsonToHTML', array(
-            'json' => $layout->get('settings')
-        ));
-        $modx->toPlaceholder('settings_table', $settingsTable, $prefix);
+        // Set placeholder with raw json output from the settings column
+        $modx->toPlaceholder('settings_json', $layout->get('settings'), $prefix);
 
         // Set separate placeholder with prefix, for easier retrieval of the other placeholders
         // Usage example: [[+[[+cl]].placeholder]]
